Fix clipboard read via active tab fallback

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -36,7 +36,8 @@
     "cookies",
     "storage",
     "clipboardRead",
-    "offscreen"
+    "offscreen",
+    "windows"
   ],
   "host_permissions": ["http://*/*", "https://*/*"],
   "commands": {
